# MIddlewareLoader

./: README.md
Middleware/MiddlewareLoader/c++/MiddlewareLoader/: ALL_BUILD.vcxproj  Buffer.cpp  Buffer.h  CMakeCache.txt  CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters  Compile.py  MiddlewareLoader.sln  MiddlewareModule.cpp  MiddlewareModule.h  Server.cpp  Server.vcxproj  Server.vcxproj.filters  Socket.cpp  Socket.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main - Backup.cpp  main.cpp
Middleware/MiddlewareLoader/c++/MiddlewareLoader/Async/: ClientTcp.cpp  ClientTcp.h  ServerTcp.cpp  ServerTcp.h
Middleware/MiddlewareLoader/c++/MiddlewareLoader/Client.dir/Debug/: Client.exe.recipe
Middleware/MiddlewareLoader/c++/MiddlewareLoader/Client.dir/Debug/Client.tlog/: CL.command.1.tlog  (+6 more)
Middleware/MiddlewareLoader/c++/MiddlewareLoader/Middleware/: Config.cpp  Config.h  FunctionManager.h  Middleware.cpp  Middleware.h  Node.cpp  Node.h
Middleware/MiddlewareLoader/c++/MiddlewareLoader/ModulosTeste/: ListFiles.hpp
Middleware/MiddlewareLoader/c++/MiddlewareLoader/Server.dir/Debug/: Server.exe.recipe
Middleware/MiddlewareLoader/c++/MiddlewareLoader/Tcp/: AsyncClient.cpp  AsyncClient.h  AsyncServer.cpp  AsyncServer.h  SyncClient.cpp  SyncClient.h
Middleware/MiddlewareLoader/c++/MiddlewareLoader/exemplos/http_server/: WBClient.hpp  main.cpp
Middleware/MiddlewareLoader/c++/MiddlewareLoader/exemplos/websocket/: WBClient.hpp  compile.bat  main.cpp  temp.txt
Middleware/MiddlewareLoader/c++/MiddlewareLoader/testClass/: SimpleMiddleware.hpp
(+86 files in other folders)
